Java 9 対応  - scala-example は、Spark以外を Java 9 (Scala 2.12.1+) 対応  - java-example は Java 9対応完(のはず)